FEATURE     * Add AssetPagesType     * Add AssetsPages     * Add ShowAssetsListHandler     * Add WrappedApi REFACTOR     -Keyboard       * Add method getKeyboardByAssetInfo     -SearchAssetHandler       * Add all processing functionality     -State       * Add state "CHOOSE_SEARCH_MODE"     -Other files       * Minor changes